# deepagents

./: .gitignore  .release-please-manifest.json  README.md  pytest.ini
.agents/skills/deepagents/: SKILL.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: release-please.yml
apps/: README_DEPLOYMENT.md  build_and_push.sh  build_and_run_local.sh  default-seccomp.json  deploy_to_prod2.sh  pull_and_run.sh
apps/business_cofounder_api/: DOCKER_README.md  Dockerfile  EVENT_LOOP_EXPLANATION.md  README.md  REFACTORING_NOTES.md  START_REFACTORED_SERVER.md  THREADING_FIX_NOTES.md  agent_factory.py  app.py  app_original.py  app_sync_calls.py  bc_api.sh  build_and_push.sh  callback_middleware.py  checkpointer.py  deploy.env.example  deploy_to_prod2.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker.env.example  docs_backend.py  expert_sync.py  pull_and_run.sh  requirements.txt
apps/business_cofounder_api/agent_factory/: __init__.py  business_agent.py  code_agent.py  expert_agent.py  facilitator_agent.py  memory.py  middleware_builder.py  model_builder.py  search_agent.py  user_agent.py  utils.py
apps/business_cofounder_api/app/: __init__.py  callbacks.py  models.py  startup.py  state.py  utils.py
apps/business_cofounder_api/expertise/: business_cofounder.md  pitch_expert.md  prime_number.md
apps/business_cofounder_worker/: Dockerfile  QUICK_START.md  README.md  __init__.py  celery_app.py  docker-compose.yml  docker-entrypoint.sh  requirements.txt  start_worker.sh  tasks.py  test_client.py
apps/wu_tanchang_api/: ARCHITECTURE.md  Dockerfile  app.py  checkpointer.py  config.json  config.py  docker-entrypoint.sh  env.example  expertise_loader.py  requirements.txt
apps/wu_tanchang_api/agent_factory/: __init__.py  agent.py  kb_search.py  model_builder.py  owner_tools.py  utils.py
apps/wu_tanchang_api/app/: __init__.py  callbacks.py  models.py  startup.py  state.py  utils.py
apps/wu_tanchang_api/scripts/: kb_build_db.py  kb_build_vectors.py  kb_extract.py  kb_query.py
apps/wu_tanchang_api/workspace/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  USERS.md  owner.json
docs/: AGENT_CREATION_AND_DIFFERENCES.md  AGENT_STATE_LIFECYCLE.md  API_ARCHITECTURE_DESIGN.md  ARCHITECTURE.md  AVAILABLE_MIDDLEWARE.md  BACKEND_ENVIRONMENT_COMPARISON.md  BUSINESS_COFOUNDER_API_REQUIREMENTS.md  BUSINESS_IDEA_OUTPUT_STORAGE.md  CLI_EDITABLE_INSTALL.md  CLI_INPUT_TO_AGENT_FLOW.md  CLI_INSTALLATION.md  CODE_REVIEW_20260615_121139.md  DOCKER_EXAMPLE.md  DOCKER_INITIALIZATION.md  LLM_STORAGE_DECISION_GUIDE.md  MULTI_TENANT_KB_AND_SKILLS.md  PLANNING_TOOLS_DESIGN.md  PLANNING_TOOLS_DESIGN_REVIEW.md  PYTHON_IMPORT_EXPLANATION.md  README_DEV.md  ROUTING_MIDDLEWARE_REVIEW.md  RUNLOOP_EXAMPLE.md  SKILLS_SYSTEM_ANALYSIS.md  STATE_VS_STORE_BACKEND.md  TASK_TOOL_SCHEMA_EXPLANATION.md  TEST_DOCKER_README.md  TEST_SKILL_UNLOCK_ISSUES.md  TODOLIST_MIDDLEWARE_EXPLAINED.md  TODO_FLOW_ANALYSIS.md  TODO_STATUS_MANAGEMENT.md  TODO_SYSTEM_PROMPT_LOCATIONS.md  TOOL_CALL_EXECUTION_FLOW.md
docs/business_cofounder_api/: APP_REFACTORING_PLAN.md  APP_REFACTORING_STATUS.md  ARCHITECTURE.md  DUAL_AGENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  INSPECT_RUNNING_TASKS.md  THREAD_MANAGEMENT.md
docs/test_reports/: wu_tanchang_api_20260620.md
libs/acp/: CHANGELOG.md
libs/cli/: CHANGELOG.md  pyproject.toml
libs/code/: CHANGELOG.md  pyproject.toml
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/deepagents-cli/: pyproject.toml
libs/deepagents/deepagents/: graph.py  model_config.py  subagent_presets.py
libs/deepagents/deepagents/backends/: filesystem.py
libs/deepagents/deepagents/middleware/: __init__.py  _tool_exclusion.py  accountant.py  aihehuo.py  artifacts.py  asset_upload.py  async_subagents.py  async_summarization.py  business_idea_development.py  business_idea_tracker.py  callback.py  datetime.py  expert_guidance.py  filesystem.py  language.py  memory.py  permissions.py  prompt_logging.py  routing.py  skills.py  subagents.py  summarization_logging.py
libs/deepagents/deepagents/state/: __init__.py  dual_agent_state.py
libs/deepagents/deepagents/subagent_prompts/: README.md  __init__.py  aihehuo.md  coder.md
libs/deepagents/tests/unit_tests/: test_callback_middleware.py  test_end_to_end.py  test_model_config.py
libs/deepagents/tests/unit_tests/backends/: test_filesystem_backend.py
libs/deepagents/tests/unit_tests/middleware/: test_routing_middleware.py
libs/talon/: CHANGELOG.md
tests/: conftest.py  model_provider.py  test_60s_pitch_creation_skill.py  test_accountant_middleware.py  test_aihehuo_business_search.py  test_aihehuo_search_middleware.py  test_artifacts_middleware.py  test_backends.py  test_baseline_pricing_optimization_skill.py  test_business_cofounder_api.py  test_business_cofounder_api_live_e2e_business_plan.py  test_business_cofounder_api_live_server.py  test_business_idea_development_middleware.py  test_business_idea_evaluation_skill.py  test_business_model_pivot_exploration_skill.py  test_datetime_middleware.py  test_deep_agent_call_async.py  test_harbor_wrapper_docker_round_one.py  test_kb_analyst_integration.py  test_memory_writing.py  test_painpoint_enhancement_skill.py  test_persona_clarification_skill.py  test_routing_to_aihehuo_subagent.py  test_routing_to_coder_subagent.py  test_sequential_skill_progression.py  test_todo_middleware.py  test_utils.py  test_wu_tanchang_api.py  test_wu_tanchang_api_e2e.py  test_wu_tanchang_async.py  test_wu_tanchang_kb_phase1.py  test_wu_tanchang_owner.py  test_wu_tanchang_progress.py  timing_middleware.py
tests/e2e/: __init__.py  test_dual_agent_conversation.py
tests/integration/: README.md  __init__.py  test_canvas_endpoint.py  test_dual_agent_creation.py  test_expert_sync_flow.py  test_facilitator_guidance_response.py  test_simulated_user_agent.py
tests/mocks/: __init__.py  dual_agent_mocks.py
tests/unit/: __init__.py  test_dual_agent_state.py  test_expert_guidance_middleware.py  test_expert_sync_helpers.py  test_expertise_loader.py
(+577 files in other folders)
